Mejoras en el calendario

--- a/app/Resources/views/crmcalendar/index.html.twig
+++ b/app/Resources/views/crmcalendar/index.html.twig
@@ -29,19 +29,35 @@
 {% endblock %}
 {% block acciones %}
      <div class="col-md-7 text-right panel-body">
-        
+        <div class="col-md-4 pull-left" style="height:20px;">
+            <button data-toggle="tooltip" data-container="body" title="Cita completada" class="btn btn-default datatables1-actions" style="color:#FFF;background:#69BD45; float: right;" role="button">
+                <i class="fa fa-calendar-check-o"></i>
+            </button>
+            <button data-toggle="tooltip" data-container="body" title="Cita pediente" class="btn btn-default datatables1-actions" style="color:#FFF;background:#3852A4; float: right;" role="button">
+                <i class="fa fa-calendar-minus-o"></i>
+            </button>
+            <button data-toggle="tooltip" data-container="body" title="Cita perdida" class="btn btn-default datatables1-actions" style="color:#FFF;background:#421E5B; float: right;" role="button">
+                <i class="fa fa-calendar-o"></i>
+            </button>
+            {#<button data-toggle="tooltip" data-container="body" title="Cita " class="btn btn-default datatables1-actions  " role="button">
+                <i class="fa fa-calendar-plus-o"></i>
+            </button>#}
+            <button data-toggle="tooltip" data-container="body" title="Cita cancelada" class="btn btn-default datatables1-actions  " style="color:#FFF;background:#F00; float: right;" role="button">
+                <i class="fa fa-calendar-times-o"></i>
+            </button>
+        </div>
+        <div class="col-md-8">
             {# <button id="btnBack" class="hidden btnBack btn btn-sm btn-default btn-flat">{{back}}</button> #}
             <input style="margin-right: 20px;" type="checkbox" id="showCancel" class="btn btn-primary">
-        
             {# <button id="btnBack" class="hidden btnBack btn btn-sm btn-default btn-flat">{{back}}</button> #}
-            <button type="button" class="btnAddPage btn btn-primary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="">{{add}}</button>
+            <button type="button" class="btnAddPage btn btn-sm btn-primary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="">{{add}}</button>
             <a id="btnCancelTop" class="hidden btn btn-sm btn-default">{{cancel}}</a>
             <button id="btnSaveTop" class="hidden btn btn-sm btn-primary">{{save}}</button>
             {# <button class="hidden btnDelete btn btn-sm btn-danger btn-flat">{{delete}}</button> #}
             <button class="hidden btnDelete btn btn-sm btn-danger btn-flat">{{cancel}}</button>
             <button class="hidden btnShow btn btn-sm btn-success btn-flat">{{show}}</button>
             <button class="hidden btnAction btn btn-sm btn-default btn-flat">{{action}}</button>
-        
+        </div>
      </div>
 {% endblock acciones %}
 {% block navegacion %}
@@ -108,6 +124,7 @@
     <script type="text/javascript" src="{{ asset('Resources/bootstrap/js/collapse.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/bootstrap/js/transition.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Resources/bootstrap/js/datetime.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/bootstrap/js/bootbox.min.js') }}"></script>
     
      
     
@@ -121,9 +138,7 @@
         var sources=new Array();
         var sucursal = $('#sucursal').val();
         
-        // $('#modal').modal();
         $(document).ready(function() {
-
             var source = 
                     {
                         url: Routing.generate('fullcalendar_loader'),
@@ -132,15 +147,12 @@
                             filtro: 1
                         },
                         error: function() {
-                            // bootbox.alert('Se produjo un error al recuperar los datos del calendario, recargue la página!');
                             console.log('Se produjo un error al recuperar los datos del calendario, recargue la página!');
                         }
-                        
                     };
 
             calendario = $('#calendar').fullCalendar({
-                            header: {
-                                
+                            header: {    
                                 left: 'title',
                                 right: 'month,agendaWeek,agendaDay, prev,next'
                             },
@@ -164,6 +176,7 @@
                             disableResizing:true,
                             eventDurationEditable:false,
                             weekends: true,
+                            textEscape: false,
                             weekNumbers: false,
                             firstDay: 0,
                             slotMinutes: 30,
@@ -231,7 +244,120 @@
                                 }
                                                                    
                             },
+                            /////Click events
+                                
+                            eventClick: function ( startDate, endDate, event, jsEvent, view )  {
+                                var hoy = new Date();
+                                var hoyDate = new Date();
+                                var dd = hoy.getDate();
+                                var mm = hoy.getMonth()+1; //hoy es 0!
+                                var yyyy = hoy.getFullYear();
+                                //alert(view.name);
+                                if(dd<10) {
+                                    dd='0'+dd
+                                } 
 
+                                if(mm<10) {
+                                    mm='0'+mm
+                                } 
+
+                                //hoy = yyyy+'-'+mm+'-'+dd;
+                                hoy = dd+'-'+mm+'-'+yyyy;
+                                //alert('"'+hoy+'"');
+                                //alert(startDate.id);
+                                //alert("Información de la citra");
+                                //alert(hoyDate);
+                                if (typeof startDate.id === 'undefined') {
+                                    return false;
+                                }
+                                $.ajax({
+                                    url: Routing.generate('admin_get_info_activities_ajax'),
+                                    type: 'POST',
+                                    data: {param1: startDate.id},
+                                    success:function(data){
+                                        if(data.error){
+                                            swal('',data.error,'error');
+                                        }
+                                        else{
+                                            var mensaje = "";
+                                            mensaje += "<div class='col-md-6 text-right'><b>{{tipoActividad}}: </b></div><div class='col-md-6'>"+data.nombre+"</div>";
+                                            mensaje += "<div class='clearfix'></div>";
+
+                                            bootbox.dialog({
+                                                message: mensaje,
+                                                title: data.nombre,
+                                                buttons: {
+                                                    reminder: {
+                                                        label: "Recordar cita",
+                                                        className: "btn-default btn-warning",
+                                                        callback: function() {
+                                                            var evento = calendario.fullCalendar('clientEvents',startDate.id);
+                                                            var tituloEvento = "";
+                                                            var id=0;
+                                                            console.log(evento);
+                                                            console.log(evento.id);
+                                                            Object.keys(evento).forEach(function (key) {
+                                                                    tituloEvento = evento[key].title;
+                                                                    console.log();
+                                                                    id=evento[key].id;
+                                                                });
+                                                            console.log(id);
+                                                        }
+                                                    },
+                                                    danger: {
+                                                            label: "Cancelar cita",
+                                                            className: "btn-danger",
+                                                            callback: function() {
+                                                                var evento = calendario.fullCalendar('clientEvents',startDate.id);
+                                                                var tituloEvento = "";
+                                                                var eventoId = 0;
+                                                                Object.keys(evento).forEach(function (key) {
+                                                                    tituloEvento = evento[key].title;
+                                                                    var subTituloEvento = tituloEvento.split("|");
+                                                                    var iconoX = '<div class="col-xs-1 fa fa-calendar-times-o" style="border:1px solid #C3C3C3; border-right:0px solid #F00; color:#FFF; height: 100%; float: left; background: #F00;  position: absolute; padding-left:2px "></div> <div class="col-xs-11" style="border-left:0px solid #000 !important; border:1px solid #C3C3C3; height: 100%; float: right; position: relative; "> ';
+                                                                    var nuevoTitulo = iconoX+' | '+subTituloEvento[1]+' | '+subTituloEvento[2] + ' | ' +subTituloEvento[3];
+                                                                    evento[key].title = nuevoTitulo;
+                                                                });
+                                                            }
+                                                        },   
+                                                    success: {
+                                                        label: "Asistida",
+                                                        className: "btn-success",
+                                                        callback: function() {
+                                                            var evento = calendario.fullCalendar('clientEvents',startDate.id);
+                                                            var tituloEvento = "";
+                                                            var eventoId = 0;
+                                                            Object.keys(evento).forEach(function (key) {
+                                                                tituloEvento = evento[key].title;
+                                                                var subTituloEvento = tituloEvento.split(" | ");
+                                                                //var iconoX = '<div class="fa fa-calendar-check-o" style="width: 17px; height: 100%; float: left; background: #69BD45;  position: absolute; margin-left: -3px; padding-left:2px "></div> <div style="width: 91%; height: 100%; float: right; position: relative; ">  | ';
+                                                                var iconoX = '<div class="col-xs-1 fa fa-calendar-check-o" style="border:1px solid #C3C3C3; border-right:0px solid #F00; color:#FFF; height: 100%; float: left; background: #69BD45;  position: absolute; padding-left:2px "></div> <div class="col-xs-11" style="border-left:0px solid #000 !important; border:1px solid #C3C3C3;  height: 100%; float: right; position: relative; ">';
+                                                                console.log(subTituloEvento[0]);
+                                                                var nuevoTitulo = iconoX+' | '+subTituloEvento[1]+' | '+subTituloEvento[2] + ' | ' +subTituloEvento[3];
+                                                                evento[key].title = nuevoTitulo;
+                                                            });
+                                                        }
+                                                    },
+                                                    main: {
+                                                        label: "Ver expediente",
+                                                        className: "btn-primary",
+                                                        callback: function() {
+                                                        }
+                                                    }
+                                                }
+                                            });
+                                        }
+                                    },
+                                    error:function(data){
+                                            if(data.error){
+                                                    console.log(data.id);
+                                                    swal('',data.error,'error');
+                                            }
+                                    }
+                                });
+                            },
+
+                            /////
                             /////Function para arrastrar un evento del calendario
                             eventDrop: function(event, delta, revertFunc, jsEvent, ui, view) {
                                 console.log(view.name);
@@ -370,7 +496,10 @@
                                             revertFunc();
                                           }
                                      });
-                            }/////Event drop
+                            },/////Event drop
+                            eventRender: function(event, element) {////Mostrar iconos
+                                element.find('.fc-title').html(event.title);
+                            },/////Fin Mostrar iconos
                     });/////Fin de calendario
             // calendario.fullCalendar('addEventSource', source);
 
@@ -450,15 +579,15 @@
             $("#filterTipoActividad, #filterPersona, #filterCuentaActividades").on("change", function (e) {
                     setsource();
             });
-            $(document).on("change","#btnShowCancel", function (e) {
-                if($(this).hasClass('btn-primary')){
+            $(document).on("click","#showCancel", function (e) {
+                {#if($(this).hasClass('btn-primary')){
                     $(this).removeClass('btn-primary');
                     $(this).addClass('btn-success');
                 }
                 else{
                     $(this).addClass('btn-primary');
                     $(this).removeClass('btn-success');
-                }
+                }#}
                     setsource();
             });
     
@@ -497,7 +626,12 @@
             filterCuentaId=$('#filterCuentaActividades').val();
             var filterTipo = $('#filterTipoActividad').val();
             var filterPersona = $('#filterPersona').val();
-            var showCancel = $('#showCancel').val();
+            var showCancel = $('#showCancel');
+            var showCancelVal = 0;
+            if(showCancel.is(':checked')){
+                showCancelVal = 1;
+            }
+            
             console.log(fechaInicio);
             console.log(fechaFin);
             for(j=0;j<sources.length;j++){
@@ -508,7 +642,7 @@
             console.log(sources[0]);
             var source2 = 
                 {
-                    url: Routing.generate('fullcalendar_loader')+'?param1='+filterTipo+'&param2='+filterPersona+'&param3='+filterCuentaId+'&param4='+showCancel,
+                    url: Routing.generate('fullcalendar_loader')+'?param1='+filterTipo+'&param2='+filterPersona+'&param3='+filterCuentaId+'&param4='+showCancelVal,
                     type: 'POST',
                     data: {
                         filtro: 1
