Correcciones de bugs - Actividades

--- a/app/Resources/views/crmactividad/activity.html.twig
+++ b/app/Resources/views/crmactividad/activity.html.twig
@@ -36,6 +36,11 @@
                         </select>
                     </div>
                     <div class="clearfix"></div> 
+                        <div class="col-md-12 hidden location" style="margin-top:20px;">
+                            <label >{{direccionReuniones}}</label> <i class="fa fa-map-marker"></i>
+                            <input id="txtDireccion" type="text" name="direccionEvent" class="input-sm form-control ">
+                        </div>
+                    <div class="clearfix"></div> 
                     <div class="col-md-12" style="margin-top:20px;">
                         <label>{{descripcionFormTodasActividades}}</label>
                         <textarea id="txtDescripcion" type="text" name="descripcion" class="input-sm form-control "></textarea>
