--- a/app/Resources/views/crmactividad/task.html.twig
+++ b/app/Resources/views/crmactividad/task.html.twig
@@ -39,6 +39,11 @@
                             </select>
                         </div>
                         <div class="clearfix"></div> 
+                        <div class="col-md-12 hidden location" style="margin-top:20px;">
+                            <label >{{direccionReuniones}}</label> <i class="fa fa-map-marker"></i>
+                            <input id="txtDireccion" type="text" name="direccionEvent" class="input-sm form-control ">
+                        </div>
+                        <div class="clearfix"></div> 
                         <div class="col-md-12" style="margin-top:20px;">
                             <label>{{descripcionFormTareas}}</label>
                             <textarea id="txtDescripcion" type="text" name="descripcion" class="input-sm form-control "></textarea>
