--- a/app/Resources/views/layout/layouterp.html.twig
+++ b/app/Resources/views/layout/layouterp.html.twig
@@ -29,7 +29,7 @@
 		
 		<div class="clearfix"></div>
 		<div style="z-index:50;margin-bottom:20px; border-bottom:1px #000" class="col-md-12 col-xs-12">
-			{% include ':layout:icons.html.twig' %}
+			{#{% include ':layout:icons.html.twig' %}#}
 		</div>
 	
 	
