--- a/app/Resources/views/layout/menu.html.twig
+++ b/app/Resources/views/layout/menu.html.twig
@@ -14,14 +14,23 @@
         <span>
     </li>
 </a>
-<a href="{{path('admin_campaigns_index')}}" class="leftnava">
+<a href="{{path('admin_tipocuenta_index')}}" class="leftnava" style="margin-top: 45px;">
+	<li class="leftnav left {% if menuTipoCuentaA is defined %}active {% endif %}">
+		{{menuTipoCuenta}}
+		<span class="pull-right right">
+			<i class="{% if menuTipoCuentaA is defined %}fa fa-arrow-right {% endif %}"></i>
+		</span>
+	</li>
+</a>            
+            
+{#<a href="{{path('admin_campaigns_index')}}" class="leftnava">
     <li class="leftnav left {% if menuCampaniaA is defined %}active {% endif %}">
         {{menuCampania}}
         <span class="pull-right right">
             <i class="{% if menuCampaniaA is defined %}fa fa-arrow-right {% endif %}"></i>
         <span>
     </li>
-</a>
+</a>#}
 <a href="{{path('admin_levelcustomersatisfaction_index')}}" class="leftnava">
     <li class="leftnav left {% if menuSatisfaccionA is defined %}active {% endif %}">
         {{menuSatisfaccion}}
@@ -30,6 +39,24 @@
         </span>
     </li>
 </a>
+    
+ <a href="{{path('admin_priority_index')}}" class="leftnava">
+	<li class="leftnav left {% if menuPrioridadA is defined %}active {% endif %}">
+		{{menuPrioridad}}
+		<span class="pull-right right ">
+			<i class="{% if menuPrioridadA is defined %}fa fa-arrow-right {% endif %}"></i>
+		</span>
+	</li>
+</a>
+                
+<a href="{{path('admin_origin-source_index')}}" class="leftnava">
+	<li class="leftnav left {% if menuFuenteOrigenA is defined %}active {% endif %}">
+		{{menuFuenteOrigen}}
+		<span class="pull-right right ">
+			<i class="{% if menuFuenteOrigenA is defined %}fa fa-arrow-right {% endif %}"></i>
+		</span>
+	</li>
+</a>
 <a href="{{path('admin_notifications_index')}}" class="leftnava">
     <li class="leftnav left {% if menuTiempoNotificacionA is defined %}active {% endif %}">
         {{menuTiempoNotificacion}}
@@ -37,17 +64,7 @@
             <i class="{% if menuTiempoNotificacionA is defined %}fa fa-arrow-right {% endif %}"></i>
         </span>
     </li>
-</a>
-
-<a href="{{path('admin_tipocuenta_index')}}" class="leftnava">
-	<li class="leftnav left {% if menuTipoCuentaA is defined %}active {% endif %}">
-		{{menuTipoCuenta}}
-		<span class="pull-right right">
-			<i class="{% if menuTipoCuentaA is defined %}fa fa-arrow-right {% endif %}"></i>
-		</span>
-	</li>
-</a>
-                
+</a>                
  <a href="{{path('crmtipocaso_index')}}" class="leftnava">
 	<li class="leftnav left {% if menuTipoCasoA is defined %}active {% endif %}">
 		{{menuTipoCaso}}
