Correcciones Cuentas generales, proveedor, cliente pontencial, socio

--- a/app/Resources/views/crmcuenta/account.html.twig
+++ b/app/Resources/views/crmcuenta/account.html.twig
@@ -88,7 +88,7 @@
                         </div>
                         <div class="col-md-4 emailText" style="margin-top:20px;">
                             <label>{{emailAccount}}</label>
-                            <input type="text" name="email[]" class="input-sm form-control  txtEmail txtEmailFirst">
+                            <input type="text" name="email[]" class="input-sm form-control  txtEmail txtEmailFirst validateInputEmail">
                         </div>
                         <div class="col-md-1 addEmail" style="margin-top:20px;">
                             <button id="plusEmail" style="margin-top:25px;" class="btn btn-success"><i class="fa fa-plus"></i></button>
