--- a/app/Resources/views/crm_oportunidad/new.html.twig
+++ b/app/Resources/views/crm_oportunidad/new.html.twig
@@ -117,7 +117,7 @@
                     </div>
                     <div class="producto col-sm-8">
                         <div id="producto-0" >
-                            <select id="sProducto-0" style="width:100%;" type="text" name="sProducto[]" class="sProducto input-sm form-control ">
+                            <select id="sProducto-0" style="width:100%;" type="text" name="sProducto[]" class="sProducto firstProduct input-sm form-control ">
                                 {% for producto in productos %}
                                     <option value={{producto.id}}>{{producto.nombre}}</option>
                                 {% endfor %}
