--- a/app/Resources/views/layout/menuventas.html.twig
+++ b/app/Resources/views/layout/menuventas.html.twig
@@ -6,7 +6,7 @@
 		</span>
 	</li>
 </a>
-<a href="{{path('admin_contact_index')}}" class="leftnava">
+{#<a href="{{path('admin_contact_index')}}" class="leftnava">
 	<li class="leftnav left {% if menuContactossA is defined %} active {% endif %}">
 		{{menuContacto}}
 		<span class="pull-right right">
@@ -21,4 +21,4 @@
 			<i class="{% if menuOportunidadesA is defined %}fa fa-arrow-right {% endif %}"></i>
 		</span>
 	</li>
-</a>
+</a>#}
