--- a/app/Resources/views/crmcuenta/cliente.html.twig
+++ b/app/Resources/views/crmcuenta/cliente.html.twig
@@ -145,7 +145,9 @@
                                 
                         </div>
                         
-                        <div class="col-md-3 contacts" style="margin-top:20px;">
+                        
+                        <div class="clearfix"></div> 
+                        {#<div class="col-md-3 contacts" style="margin-top:20px;">
                             <label>Contacts</label>
                             <label >{{cuentaActividad}}</label>
                             <select style="width:100%;" id="contactos" name="contactos[]" class=" cal input-sm form-control validateSelect  dpbContacts dpbFirstContacts">
@@ -153,12 +155,19 @@
                                 {# {% for actividad in actividades %}
                                     <option value={{actividad.id}}>{{actividad.nombre}}</option>
                                 {% endfor %} #}
-                            </select>
+                            {#</select>
+                        </div>
+                        <div class="col-md-4 contactsTelefono" style="margin-top:20px;">
+                            <label>{{telefonoContacto}}</label>
+                            <label class="telefonoContactoFirst" style="width:100%;"> </label>
+                        </div>
+                        <div class="col-md-4 contactsCorreo" style="margin-top:20px;">
+                            <label>{{correoContacto}}</label>
+                            <label class="correoContactoFirst" style="width:100%;"> </label>
                         </div>
                         <div class="col-md-1 addContact" style="margin-top:20px;">
                             <button id="plusContact" style="margin-top:25px;" class="btn btn-success"><i class="fa fa-plus"></i></button>
-                        </div> 
-                        <div class="clearfix"></div> 
+                        </div>#}
                         {#<div class="col-md-3" style="margin-top:20px;">
                             <label>{{nombreCliente}}</label>
                             <input id="txtContactoFirstName" type="text" name="txtContactoLastName[]" class="input-sm form-control validateInput">
@@ -176,7 +185,6 @@
                             <label>{{emailCliente}}</label>
                             <input id="txtContactoEmail" type="text" name="txtContactoEmail" class="input-sm form-control validateInput">
                         </div>#}
-                           
                         <div class="clearfix"></div> 
                             <div class="col-md-4 pull-right text-right" style="margin-top:20px;">
                                 <a id="btnCancel" class="btn btn-sm btn-default">{{cancel}}</a>
